# CUV

./: .gitignore  .gitmodules  CMakeLists.txt  README
CMakeModules/: FindCUDA.cmake  FindOpenCV.cmake  FindOpenMP.cmake  FindPyUblas.cmake
debian/: build_package.sh  changelog  control  copyright  do_release  docs  gbp.conf  libcuv-doc.docs  libcuv0.install  rules  shlibs.local
src/: 0_mainpage.hpp  CMakeLists.txt  Makefile  bla.cpp  cuv.hpp  mainpage.hpp
src/CMakeModules/: FindCxxTest.cmake  run_nvcc.cmake
src/basics/: CMakeLists.txt  cuda_array.cu  cuda_array.hpp  dense_matrix.hpp  dev_dense_matrix.cu  dev_dense_matrix.hpp  dev_dia_matrix.hpp  dev_vector.cu  dev_vector.hpp  dia_matrix.hpp  dmatrix.hpp  filter_factory.hpp  host_dense_matrix.hpp  host_dia_matrix.hpp  host_vector.hpp  matrix.hpp  sparse_matrix.hpp  sparse_matrix_io.hpp  toeplitz_matrix.hpp  vector.cu  vector.hpp
src/convert/: CMakeLists.txt  convert.cu  convert.hpp
src/convolution_ops/: CMakeLists.txt  convolution_ops.cu  convolution_ops.hpp
src/cuv/: CMakeLists.txt  cuv.cpp
src/cuv/basics/: CMakeLists.txt  Makefile  accessors.cu  accessors.hpp  allocators.cu  allocators.hpp  cuda_array.cu  cuda_array.hpp  dense_matrix.hpp  dia_matrix.hpp  filter_factory.hpp  image.hpp  io.cpp  io.hpp  linear_memory.cu  linear_memory.hpp  matrix.hpp  memory.cu  memory.hpp  memory2d.hpp  reference.cu  reference.hpp  sparse_matrix_io.hpp  tags.hpp  tensor.hpp  tensor2.hpp  vector.cu  vector.hpp
src/cuv/convert/: CMakeLists.txt  convert.cu  convert.hpp
src/cuv/convolution_ops/: CMakeLists.txt  convolution_ops.cu  convolution_ops.hpp  convolution_ops_theano.hpp
src/cuv/image_ops/: CMakeLists.txt  image_pyramid.cu  image_pyramid.hpp  move.cu  move.hpp
src/cuv/libs/: CMakeLists.txt
src/cuv/libs/caffe/: LICENSE  caffe.cu  caffe.hpp
src/cuv/libs/cimg/: CMakeLists.txt  cuv_cimg.cu  cuv_cimg.hpp
src/cuv/libs/hog/: CMakeLists.txt  hog.cu  hog.hpp
src/cuv/libs/integral_image/: CMakeLists.txt  integral_image.cu  integral_image.hpp
src/cuv/libs/kernels/: CMakeLists.txt  kernels.cu  kernels.hpp
src/cuv/libs/kmeans/: CMakeLists.txt  kmeans.cu  kmeans.hpp
src/cuv/libs/nlmeans/: CMakeLists.txt  conv3d.cu  conv3d.hpp  nlmeans.cu  nlmeans.hpp
src/cuv/libs/opt/: CMakeLists.txt  opt.cu  opt.hpp
src/cuv/libs/rbm/: CMakeLists.txt  rbm.cu  rbm.hpp
src/cuv/libs/separable_conv/: CMakeLists.txt  separable_convolution.cu  separable_convolution.hpp
src/cuv/libs/theano_ops/: CMakeLists.txt  theano_ops.cu  theano_ops.hpp
src/cuv/matrix_ops/: CMakeLists.txt  densedense_to_sparse.cu  densedense_to_sparse.hpp  diagonals.cu  diagonals.hpp  make_spmv_header.pl  matrix_ops.cu  matrix_ops.hpp  matrix_ops_reduce.cu  rprop.hpp  spmv.cu
src/cuv/random/: CMakeLists.txt  random.cu  random.hpp
src/cuv/tensor_ops/: CMakeLists.txt  functors.hpp  instantiate.py  rprop.cu  rprop.hpp  spn_gd.cu  spn_gd.hpp  tensor_ops.cu  tensor_ops.cuh  tensor_ops.hpp  tensor_ops_inst.hxx  type_traits.hpp
src/cuv/tensor_ops/instantiations/: inst00.cu  inst01.cu  inst02.cu  inst03.cu  inst04.cu  inst05.cu  inst06.cu  inst07.cu  inst08.cu  inst09.cu
src/cuv/tools/: CMakeLists.txt  cuPrintf.cu  cuPrintf.cuh  cuv_general.cu  cuv_general.hpp  cuv_general.hpp.gch  cuv_test.hpp  device_tools.cpp  device_tools.h  device_tools.hpp  exception_helper.hpp  meta_programming.hpp  progressbar.cpp  progressbar.hpp  timing.hpp
src/cuv/vector_ops/: CMakeLists.txt  functors.hpp  instantiate.py  rprop.cu  rprop.hpp  vector_ops.cu  vector_ops_inst.hxx
src/cuv_python/: CMakeLists.txt  __init__.py  export_convolution_ops.cpp  export_cuda_array.cpp  export_dense_matrix.cpp  export_dia_mat.cpp  export_image_ops.cpp  export_libs_cimg.cpp  export_libs_hog.cpp  export_libs_kernels.cpp  export_libs_kmeans.cpp  export_libs_rbm.cpp  export_matrix_ops.cpp  export_random.cpp  export_tensor.cpp  export_tensor_ops.cpp  export_tools.cpp  export_vector.cpp  export_vector_ops.cpp  python_bindings.cpp
src/image_ops/: CMakeLists.txt  image_pyramid.cu  image_pyramid.hpp  move.cu  move.hpp
src/libs/: CMakeLists.txt
src/libs/cimg/: CMakeLists.txt  cuv_cimg.cu  cuv_cimg.hpp
src/libs/kernels/: CMakeLists.txt  kernels.cu  kernels.hpp
src/libs/kmeans/: CMakeLists.txt  kmeans.cu  kmeans.hpp
src/libs/rbm/: rbm.cu  rbm.hpp
src/libs/separable_conv/: CMakeLists.txt  separable_convolution.cu  separable_convolution.hpp
src/matrix_ops/: CMakeLists.txt  densedense_to_sparse.cu  densedense_to_sparse.hpp  diagonals.cu  diagonals.hpp  make_spmv_header.pl  matrix_ops.cu  matrix_ops.hpp  matrix_ops_reduce.cu  rprop.hpp  spmv.cu  spmv_kernel.cuh  spmv_toeplitz_kernel.cuh
src/python_bindings/: CMakeLists.txt  __init__.py  export_convolution_ops.cpp  export_cuda_array.cpp  export_dense_matrix.cpp  export_dia_mat.cpp  export_image_ops.cpp  export_libs_rbm.cpp  export_matrix_ops.cpp  export_random.cpp  export_toeplitz.cpp  export_tools.cpp  export_vector.cpp  export_vector_ops.cpp  python_bindings.cpp
src/random/: CMakeLists.txt  random.cu  random.hpp
src/tests/: CMakeLists.txt  alloc.cpp  basic.cpp  bigimage_convolution_ops.cpp  cimg.cpp  conv_op.cpp  conv_op_speed.cpp  convert.cpp  cuv_python.py  densedense_to_dia.cpp  densedense_to_dia_speed.cpp  dia_mat.cpp  image_ops.py  lib_hog.cpp  lib_intimg.cpp  lib_kmeans.cpp  lib_nlmean.cpp  lib_rbm.cpp  lib_sep_conv.cpp  lib_theano_ops.cpp  matrix_op.cpp  matrix_op_speed.cpp  memory.cpp  optimize.cpp  python_bindings.py  random.cpp  random_speed.cpp  spmv.cpp  spmv_speed.cpp  spmv_toeplitz.cpp  spmv_toeplitz_speed.cpp  tensor.cpp  tensor_op.cpp  tensor_op_speed.cpp  tensor_serialization.cpp  toeplitz_mat.cpp  vec_op.cpp  vec_op_speed.cpp
src/tests/python/: image_ops.py  kernels.py  test_python_bindings.py
src/tools/: CMakeLists.txt  cuPrintf.cu  cuv_general.cu  cuv_general.hpp  cuv_test.hpp  device_tools.cpp  device_tools.h  exception_helper.hpp  memory_tools.cpp  memory_tools.h  meta_programming.hpp  texture.h  timing.hpp
src/vector_ops/: CMakeLists.txt  functors.hpp  rprop.cu  rprop.hpp  vector_ops.cu  vector_ops.hpp
(+62 files in other folders)
