CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_basics STATIC
	dev_vector.cu
  )
TARGET_LINK_LIBRARIES(cuv_basics cuv_vector_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${Boost_SERIALIZATION_LIBRARY})
install(TARGETS cuv_basics
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
