#FIND_PACKAGE( BLAS )

INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/3rd_party/CudaConv )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/basics )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/vector_ops )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/convert )

CUDA_INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/3rd_party/CudaConv )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/basics )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/vector_ops )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/convert )

CUDA_ADD_LIBRARY(cuv_convolution_ops
	convolution_ops.cu
  )

TARGET_LINK_LIBRARIES(cuv_convolution_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${BLAS_LIBRARIES} cuv_convert cuda_conv)

