FIND_PACKAGE( BLAS )


CUDA_INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/basics )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/vector_ops )
CUDA_ADD_LIBRARY(cuv_matrix_ops SHARED
	matrix_ops.cu
	spmv.cu
  )
TARGET_LINK_LIBRARIES(cuv_matrix_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${BLAS_LIBRARIES} )


