FIND_PACKAGE( BLAS )

ADD_CUSTOM_COMMAND(
	OUTPUT  ${CMAKE_CURRENT_BINARY_DIR}/spmv_kernel.cuh.generated
	COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/make_spmv_header.pl ${CMAKE_CURRENT_SOURCE_DIR}/spmv.cu ${CMAKE_CURRENT_SOURCE_DIR}/spmv_kernel.cuh ${CMAKE_CURRENT_BINARY_DIR}/spmv_kernel.cuh.generated
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/spmv.cu ${CMAKE_CURRENT_SOURCE_DIR}/spmv_kernel.cuh ${CMAKE_CURRENT_SOURCE_DIR}/make_spmv_header.pl
	)

CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/basics )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/vector_ops )
CUDA_ADD_LIBRARY(cuv_matrix_ops STATIC
	densedense_to_sparse.cu
	matrix_ops.cu
	spmv.cu
	${CMAKE_CURRENT_BINARY_DIR}/spmv_kernel.cuh.generated
  )
TARGET_LINK_LIBRARIES(cuv_matrix_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${BLAS_LIBRARIES} )
install(TARGETS cuv_matrix_ops
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)


