CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/basics )
CUDA_ADD_LIBRARY(cuv_random STATIC
	random.cu
  )
TARGET_LINK_LIBRARIES(cuv_random ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/MersenneTwister.dat ${CMAKE_BINARY_DIR} COPYONLY)

install(TARGETS cuv_random
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)

